fix(panelbar): align vertically sprites and images

--- a/styles/web/kendo.common-material.less
+++ b/styles/web/kendo.common-material.less
@@ -49,14 +49,6 @@
     line-height: 3.5em;
 }
 
-.k-panelbar .k-image {
-    margin-top: 12px;
-}
-
-.k-panelbar .k-link > .k-sprite {
-    margin-top: 16px;
-}
-
 .k-tabstrip > .k-tabstrip-items > .k-item {
     text-transform: uppercase;
     border-width: 0;
